add proto sample
