# gen/bookstore.pb.validate.go
@@ -1,274 +1,0 @@
-// Code generated by protoc-gen-validate. DO NOT EDIT.
-// source: bookstore.proto
-
-package gen
-
-import (
-	"bytes"
-	"errors"
-	"fmt"
-	"net"
-	"net/mail"
-	"net/url"
-	"regexp"
-	"sort"
-	"strings"
-	"time"
-	"unicode/utf8"
-
-	"google.golang.org/protobuf/types/known/anypb"
-)
-
-// ensure the imports are used
-var (
-	_ = bytes.MinRead
-	_ = errors.New("")
-	_ = fmt.Print
-	_ = utf8.UTFMax
-	_ = (*regexp.Regexp)(nil)
-	_ = (*strings.Reader)(nil)
-	_ = net.IPv4len
-	_ = time.Duration(0)
-	_ = (*url.URL)(nil)
-	_ = (*mail.Address)(nil)
-	_ = anypb.Any{}
-	_ = sort.Sort
-)
-
-// Validate checks the field values on Shelf with the rules defined in the
-// proto definition for this message. If any rules are violated, the first
-// error encountered is returned, or nil if there are no violations.
-func (m *Shelf) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on Shelf with the rules defined in the
-// proto definition for this message. If any rules are violated, the result is
-// a list of violation errors wrapped in ShelfMultiError, or nil if none found.
-func (m *Shelf) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *Shelf) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	// no validation rules for Id
-
-	// no validation rules for Theme
-
-	if len(errors) > 0 {
-		return ShelfMultiError(errors)
-	}
-
-	return nil
-}
-
-// ShelfMultiError is an error wrapping multiple validation errors returned by
-// Shelf.ValidateAll() if the designated constraints aren't met.
-type ShelfMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m ShelfMultiError) Error() string {
-	var msgs []string
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m ShelfMultiError) AllErrors() []error { return m }
-
-// ShelfValidationError is the validation error returned by Shelf.Validate if
-// the designated constraints aren't met.
-type ShelfValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e ShelfValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e ShelfValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e ShelfValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e ShelfValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e ShelfValidationError) ErrorName() string { return "ShelfValidationError" }
-
-// Error satisfies the builtin error interface
-func (e ShelfValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sShelf.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = ShelfValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = ShelfValidationError{}
-
-// Validate checks the field values on ListShelvesResponse with the rules
-// defined in the proto definition for this message. If any rules are
-// violated, the first error encountered is returned, or nil if there are no violations.
-func (m *ListShelvesResponse) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on ListShelvesResponse with the rules
-// defined in the proto definition for this message. If any rules are
-// violated, the result is a list of violation errors wrapped in
-// ListShelvesResponseMultiError, or nil if none found.
-func (m *ListShelvesResponse) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *ListShelvesResponse) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	for idx, item := range m.GetShelves() {
-		_, _ = idx, item
-
-		if all {
-			switch v := interface{}(item).(type) {
-			case interface{ ValidateAll() error }:
-				if err := v.ValidateAll(); err != nil {
-					errors = append(errors, ListShelvesResponseValidationError{
-						field:  fmt.Sprintf("Shelves[%v]", idx),
-						reason: "embedded message failed validation",
-						cause:  err,
-					})
-				}
-			case interface{ Validate() error }:
-				if err := v.Validate(); err != nil {
-					errors = append(errors, ListShelvesResponseValidationError{
-						field:  fmt.Sprintf("Shelves[%v]", idx),
-						reason: "embedded message failed validation",
-						cause:  err,
-					})
-				}
-			}
-		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
-			if err := v.Validate(); err != nil {
-				return ListShelvesResponseValidationError{
-					field:  fmt.Sprintf("Shelves[%v]", idx),
-					reason: "embedded message failed validation",
-					cause:  err,
-				}
-			}
-		}
-
-	}
-
-	if len(errors) > 0 {
-		return ListShelvesResponseMultiError(errors)
-	}
-
-	return nil
-}
-
-// ListShelvesResponseMultiError is an error wrapping multiple validation
-// errors returned by ListShelvesResponse.ValidateAll() if the designated
-// constraints aren't met.
-type ListShelvesResponseMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m ListShelvesResponseMultiError) Error() string {
-	var msgs []string
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m ListShelvesResponseMultiError) AllErrors() []error { return m }
-
-// ListShelvesResponseValidationError is the validation error returned by
-// ListShelvesResponse.Validate if the designated constraints aren't met.
-type ListShelvesResponseValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e ListShelvesResponseValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e ListShelvesResponseValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e ListShelvesResponseValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e ListShelvesResponseValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e ListShelvesResponseValidationError) ErrorName() string {
-	return "ListShelvesResponseValidationError"
-}
-
-// Error satisfies the builtin error interface
-func (e ListShelvesResponseValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sListShelvesResponse.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = ListShelvesResponseValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = ListShelvesResponseValidationError{}
